Add Text LoveTAS button

--- a/ClipInput.Client/ClipInputToolComponent.razor
+++ b/ClipInput.Client/ClipInputToolComponent.razor
@@ -114,7 +114,7 @@
         { "Basic", new[] { "Default", "LoveTAS" } },
         { "Compact", new[] { "Default", "LoveTAS" } },
         { "Image", new[] { "Default", "White", "Classic" } },
-        { "Text", new[] { "Default" } }
+        { "Text", new[] { "Default", "LoveTAS" } }
     };
 
     public string? SelectedSkinId
